@@ -1,30 +1,40 @@
-package annotations;//: annotations/UseCaseTracker.java
-import java.lang.reflect.*;
-import java.util.*;
+package annotations;// annotations/UseCaseTracker.java
+// (c)2017 MindView LLC: see Copyright.txt
+// We make no guarantees that this code is fit for any purpose.
+// Visit http://OnJava8.com for more book information.
+
+import java.lang.reflect.Method;
+import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 public class UseCaseTracker {
-  public static void
-  trackUseCases(List<Integer> useCases, Class<?> cl) {
-    for(Method m : cl.getDeclaredMethods()) {
-      UseCase uc = m.getAnnotation(UseCase.class);
-      if(uc != null) {
-        System.out.println("Found Use Case:" + uc.id() +
-          " " + uc.description());
-        useCases.remove(new Integer(uc.id()));
-      }
+    public static void
+    trackUseCases(List<Integer> useCases, Class<?> cl) {
+        for (Method m : cl.getDeclaredMethods()) {
+            UseCase uc = m.getAnnotation(UseCase.class);
+            if (uc != null) {
+                System.out.println("Found Use Case " +
+                        uc.id() + "\n  " + uc.description());
+                useCases.remove(Integer.valueOf(uc.id()));
+            }
+        }
+        useCases.forEach(i ->
+                System.out.println("Missing use case " + i));
     }
-    for(int i : useCases) {
-      System.out.println("Warning: Missing use case-" + i);
+
+    public static void main(String[] args) {
+        List<Integer> useCases = IntStream.range(47, 51)
+                .boxed().collect(Collectors.toList());
+        trackUseCases(useCases, PasswordUtils.class);
     }
-  }
-  public static void main(String[] args) {
-    List<Integer> useCases = new ArrayList<Integer>();
-    Collections.addAll(useCases, 47, 48, 49, 50);
-    trackUseCases(useCases, PasswordUtils.class);
-  }
-} /* Output:
-Found Use Case:47 Passwords must contain at least one numeric
-Found Use Case:48 no description
-Found Use Case:49 New passwords can't equal previously used ones
-Warning: Missing use case-50
-*///:~
+}
+/* Output:
+Found Use Case 48
+  no description
+Found Use Case 47
+  Passwords must contain at least one numeric
+Found Use Case 49
+  New passwords can't equal previously used ones
+Missing use case 50
+*/
